pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-199-link_reference_definitions.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 123
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/199-link_reference_definitions.md
---
[foo]:

[foo]
