pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-202-link_reference_definitions.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 123
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/202-link_reference_definitions.md
---
]8;;file://HOSTNAME/ROOT/url/bar*baz\[34mfoo[0m]8;;\
